syntax = "proto3";

// 命 令 号: 1002
// 命令名称: infrared_onoff_get
// 命令描述: 读取红外开关量
// 文件名称: d5c1002_ir_onoff_get.proto

// 以下是 Android 生成对应 Java 所需信息
option java_package = "com.ubtedu.deviceconnect.libs.ukit.smart.protobuffer";
option java_outer_classname = "PbInfraredOnoffGet";

message InfraredOnoffGetRequest {

}

message InfraredOnoffGetResponse {
  // ATTR: REQACK
  bool  on_off = 1; //开关量，false表示无遮挡，true表示有遮挡
}
